--- a/ComparaYa/ComparaYa.csproj
+++ b/ComparaYa/ComparaYa.csproj
@@ -61,6 +61,9 @@
     <EmbeddedResource Update="Views\MainTabs.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="WelcomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
