--- a/ComparaYa.Android/ComparaYa.Android.csproj
+++ b/ComparaYa.Android/ComparaYa.Android.csproj
@@ -77,6 +77,8 @@
     <AndroidAsset Include="Assets\empty.json" />
     <AndroidAsset Include="Assets\welcome2.json" />
     <AndroidAsset Include="Assets\load.json" />
+    <AndroidAsset Include="Assets\lupa.json" />
+    <AndroidAsset Include="Assets\lupa2.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
