--- a/ComparaYa.Android/ComparaYa.Android.csproj
+++ b/ComparaYa.Android/ComparaYa.Android.csproj
@@ -79,6 +79,8 @@
     <AndroidAsset Include="Assets\load.json" />
     <AndroidAsset Include="Assets\lupa.json" />
     <AndroidAsset Include="Assets\lupa2.json" />
+    <AndroidAsset Include="Assets\fav.json" />
+    <AndroidAsset Include="Assets\love.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -134,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\nofav.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\sifav.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
