--- a/ComparaYa.Android/ComparaYa.Android.csproj
+++ b/ComparaYa.Android/ComparaYa.Android.csproj
@@ -86,6 +86,8 @@
     <AndroidAsset Include="Assets\lupa2.json" />
     <AndroidAsset Include="Assets\fav.json" />
     <AndroidAsset Include="Assets\love.json" />
+    <AndroidAsset Include="Assets\loadprod1.json" />
+    <AndroidAsset Include="Assets\loadd.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -184,6 +186,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logohd.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
