--- a/ComparaYa.Android/ComparaYa.Android.csproj
+++ b/ComparaYa.Android/ComparaYa.Android.csproj
@@ -88,6 +88,7 @@
     <AndroidAsset Include="Assets\love.json" />
     <AndroidAsset Include="Assets\loadprod1.json" />
     <AndroidAsset Include="Assets\loadd.json" />
+    <AndroidAsset Include="Assets\back.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
