--- a/ComparaYa/ComparaYa.csproj
+++ b/ComparaYa/ComparaYa.csproj
@@ -39,6 +39,9 @@
     <EmbeddedResource Update="ComparationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="DeleteAdmin.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Favs.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
